<resources>
    <string name="app_name">Cyclone Connect</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_account">Create Account </string>
    <string name="select_major">Computer Science</string>
    <string name="select_subject">Computer Science</string>
    <string name="select_course">Course 1\ncourse 2\ncourse 3</string>
    <string name="health_and_wellness">Health And Wellness</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="note_subtitle">note_subtitle</string>
    <string name="type_note_here">type_note_here</string>
    <string name="my_notes">my_notes</string>
    <string name="search_notes">search_notes</string>
    <string name="accent_colour">Accent Colour</string>
    <string name="launcher_title">Simple Notes</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="background_colour">Background Colour</string>
    <string name="colour_indicator">Colour indicator</string>
    <string name="colour_navigation_bar">Colour Navigation Bar</string>
    <string name="confirm_delete">Confirm Deletion</string>
    <string name="confirm_delete_text">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="empty_list_text">Press the button on the bottom right to add a new note!</string>
    <string name="exception">Exception: </string>
    <string name="font_colour">Font Colour</string>
    <string name="new_note">New Note</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share_to">Share to:</string>
    <string name="share">Share</string>
    <string name="sort">Sort</string>
    <string name="title">Title</string>
    <string name="yes">Yes</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="get_note">Get Note</string>
    <string name="set_note">Set Note</string>
    <string name="note_change">Note Changed</string>
    <string name="note_title">Note Title</string>
    <string name="note_title_description">The title of the note</string>
    <string name="note_content">Note Content</string>
    <string name="note_content_description">The contents of the note</string>
    <string name="append">Append</string>
    <string name="append_text">Append text instead of overwriting</string>
    <string name="note_not_found">Note %1$s not found</string>
    <string name="Description">Description</string>
    <string name="save">save</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="social_media">Social Media</string>
    <string name="profile">profile</string>
    <string name="side_plank">
    Benefits of Plank \n1) Helps improve your posture.\n2) Might provide flexibility.\n3) Helps reduce back pain.
</string>
    <string name="lunges">
    Benefits of Lunges \n1) Weight Loss.\n2) Balance and Stability.\n3) Alignment and Symmetry.\n4) Strengthens legs and buttocks.
</string>
    <string name="stepping">
    Benefits of High Stepping \n1) Reduce Belly fat.\n2) It helps to improve posture.
</string>
    <string name="abs_crunches">
    Benefits of Crunches \n1) It helps to improve posture.\n2) Strong core.\n3) It helps in weight loss.
</string>
    <string name="push_ups">
    Benefits of Push Ups \n1) Burning Calories.\n2) Improving your balance and posture.\n3) Improving upper body strength.
</string>
    <string name="save_note">save_Note</string>
    <string name="save_event">Save Event</string>
    <string name="delete_note">delete</string>
    <string name="update_note">update_note</string>
    <string name="Profile">Profile</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="description">Description</string>
    <string name="ames">AMES</string>
    <string name="location_icon">Location Icon</string>
    <string name="fri_jun_26">FRI, JUN 26</string>
    <string name="main_weeather_pic">Main Weeather Pic</string>
    <string name="_27">27°</string>
    <string name="slightly_snow">slightly snow</string>
    <string name="humidity">Humidity</string>
    <string name="_94">94%</string>
    <string name="wind">Wind</string>
    <string name="_3_km_h">3 km/h</string>
    <string name="feels_like">Feels Like</string>
    <string name="_19">19°</string>
    <string name="steps_counter">Steps Counter</string>
    <string name="_0">0</string>
    <string name="steps">Steps</string>
    <string name="_0_00_m">0.00 m</string>
    <string name="distance">Distance</string>
    <string name="_0_00_cal">0.00 cal</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="reset">Reset</string>
    <string name="satellite_view">Satellite View</string>
    <string name="my_location_to_destination">My Location to Destination</string>
    <string name="welcome_to_emergency_edits">Welcome to Emergency Edits!</string>
    <string name="view_all_emergency_contacts">View All Emergency Contacts</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="enter_major_name">Enter Major Name</string>
    <string name="add_major">Add Major</string>
    <string name="destination">Destination</string>
    <string name="submit">Submit</string>
    <string name="welcome_advisor">Welcome Advisor!</string>
    <string name="student_chat">Student Chat</string>
    <string name="welcome_admin">Welcome Admin!</string>
    <string name="fetch_all_users">Fetch All Users</string>
    <string name="bugs_chat">Bugs Chat</string>
    <string name="calender_updates">Calender Updates</string>
    <string name="notes_updates">Notes Updates</string>
    <string name="emergency_contacts_updates">Emergency Contacts Updates</string>
    <string name="health_wellness_updates">Health/Wellness Updates</string>
    <string name="navigation_edits">Navigation Edits</string>
    <string name="edit_user">Edit User</string>
    <string name="head_start">Head Start</string>
    <string name="emergency_id">Emergency ID</string>
    <string name="chat_with_advisor">Chat With Advisor</string>
    <string name="type_your_message">Type your message...</string>
    <string name="send">Send</string>
    <string name="weekly">Weekly</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="are_you_sure_you_want_to_delete_your_account_this_action_cannot_be_undone">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="delete_account">Delete Account</string>
    <string name="enter_major_id_to_delete">Enter Major ID to Delete</string>
    <string name="delete_major">Delete Major</string>
    <string name="delete_navigation_item">Delete Navigation Item</string>
    <string name="navigation_item_id">Navigation Item ID</string>
    <string name="event_name">Event Name</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="event_description">Event Description</string>
    <string name="fitness_app">Cy Fit</string>
    <string name="kcal">KCAL</string>
    <string name="_150">150</string>
    <string name="_50_55">50-55</string>
    <string name="minutes">Minutes</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="calories">Calories</string>
    <string name="time">Time</string>
    <string name="one_place_to_know_is_all">One place to know is all!</string>
    <string name="welcome_to_fitness_app">Welcome to Fitness App</string>
    <string name="see_exercise">See Exercise</string>
    <string name="step_counter">Step Counter</string>
    <string name="help_menu">Help Menu</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="navigate_app">Navigate App</string>
    <string name="report_bugs">Report Bugs</string>
    <string name="help">Help</string>
    <string name="notes">Notes</string>
    <string name="weather">Weather</string>
    <string name="advisor_chat">Advisor Chat</string>
    <string name="calendar">Calendar</string>
    <string name="maps">Maps</string>
    <string name="cyclone_ai">Cyclone AI</string>
    <string name="cyclone_connect">Cyclone Connect</string>
    <string name="login">Login</string>
    <string name="enter_major_id">Enter Major ID</string>
    <string name="enter_new_major_name">Enter New Major Name</string>
    <string name="update_major">Update Major</string>
    <string name="welcome">Welcome</string>
    <string name="course_name">Course Name</string>
    <string name="course_number">Course Number</string>
    <string name="course_description">Course Description</string>
    <string name="major_id">Major ID</string>
    <string name="add_course">Add Course</string>
    <string name="course_id">Course ID</string>
    <string name="programming_languages">Programming Languages</string>
    <string name="framework">Framework</string>
    <string name="resources">Resources</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="time_complexity">Time Complexity</string>
    <string name="reviews">Reviews</string>
    <string name="add_specific_course">Add Specific Course</string>
    <string name="update_course">Update Course</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="update_photo">Update Photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="here_you_can_make_changes_to_your_profile_photo">Here you can make changes to your profile photo</string>
    <string name="add_details_of_the_item_you_found">Add details of the item you found</string>
    <string name="item_name">Item Name</string>
    <string name="select_category">Select category</string>
    <string name="location">Location</string>
    <string name="select_date_of_found">Select Date of found</string>
    <string name="selected_date">Selected Date</string>
    <string name="upload_image">Upload Image</string>
    <string name="markloc">MarkLoc</string>
    <string name="location_at_where_you_found_it">Location at where you found it!</string>
    <string name="embedded_links">Embedded Links</string>
    <string name="road_map">Road Maps</string>
    <string name="rating">Ratings</string>
    <string name="edited_by">Edited By</string>
    <string name="prerequisites">Pre-Requisites</string>
    <string name="total_credits">Total Credits</string>
    <string name="card_id">Card ID</string>
    <string name="credits">Credits</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email_id">Enter Your Email</string>
    <string name="enter_exercise_id">Enter Exercise ID</string>
    <string name="image_url">Image URL</string>
    <string name="duration_in_minutes">Duration (in minutes)</string>
    <string name="update_exercise">Update Exercise</string>
</resources>