<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/courseIdEditText"
        android:layout_width="376dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:hint="@string/course_id"
        android:inputType="number" />

    <EditText
        android:id="@+id/courseNameEditText"
        android:layout_width="380dp"
        android:layout_height="63dp"
        android:autofillHints=""
        android:hint="@string/course_name" />

    <EditText
        android:id="@+id/courseNumberEditText"
        android:layout_width="382dp"
        android:layout_height="66dp"
        android:autofillHints=""
        android:hint="@string/course_number" />

    <EditText
        android:id="@+id/courseDescriptionEditText"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:hint="@string/course_description"
        android:autofillHints="" />

    <EditText
        android:id="@+id/majorIdEditText"
        android:layout_width="376dp"
        android:layout_height="63dp"
        android:hint="@string/major_id"
        android:inputType="number"
        android:autofillHints="" />

    <Button
        android:id="@+id/updateCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:text="@string/update_course" />

</LinearLayout>