<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextCardId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_id"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name" />

    <EditText
        android:id="@+id/editTextCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/credits"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinnerGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonUpdateCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_course" />

</LinearLayout>