<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etMajorID"
        android:layout_width="374dp"
        android:layout_height="82dp"
        android:autofillHints=""
        android:hint="@string/enter_major_id"
        android:inputType="number" />

    <EditText
        android:id="@+id/etNewMajorName"
        android:layout_width="378dp"
        android:layout_height="83dp"
        android:autofillHints=""
        android:hint="@string/enter_new_major_name"
        android:inputType="text" />

    <Button
        android:id="@+id/btnUpdateMajor"
        android:layout_width="382dp"
        android:layout_height="72dp"
        android:text="@string/update_major" />
</LinearLayout>
